--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,19 @@
 }
 
 .container_img{
-    width: 25%;
+    /* width: 25%; */
+    position: relative;
 }
 
 img{
+    display: none;
     max-width: 100%;
+    height: 350px;
+    object-fit: cover;
 }
 
-.container_icon{
+
+.container_icon_up{
     background-color: white;
     border: 1px solid black;
     border-radius: 50%;
@@ -34,7 +39,26 @@ img{
     transform: translate(-50%, -50%);
 }
 
+.container_icon_down{
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, 50%)
+}
+
 .fa-solid{
    font-size: 20px;
 }
 
+.active{
+    display: block;
+}
